# learncuda

./: .gitignore  README.md  main.cu
misc/: gpuinfo.cu  matmul_tiled  matmul_tiled.cu
mnist/: CMakeLists.txt  CMakePresets.json  README.md  main.cu
template/: makefile
